ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Contact_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contact_Address_Street__c</fullName>
    <description>The mailing address for Correspondence related to this case. This pulls the Buiding&apos;s Parent Account address OR the Contact&apos;s address if there is one. If not, it defaults to the building address.</description>
    <formula>IF( 
NOT(ISBLANK(Account.ParentId)), 
( 
Account.Parent.BillingStreet
), 
IF( 
NOT(ISBLANK(Contact.MailingStreet)), 
( 
Contact.MailingStreet 
), 
( 
Account.BillingStreet
) 
) 
)</formula>
    <inlineHelpText>Mailing address for correspondence related to this Claim.</inlineHelpText>
    <label>Conga Contact Address Street</label>
    <type>Text</type>
</CustomField>