ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contact_Name__c</fullName>
    <formula>Contact.FirstName + &quot; &quot; + Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Contact Name</label>
    <type>Text</type>
</CustomField>