ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Conga_Country_Code__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Account.ParentId)),
	(
         TEXT(Account.Parent.BillingCountryCode)
	),
	IF(
		NOT(ISBLANK(Contact.MailingStreet)),
		(
			TEXT(Contact.MailingCountryCode)
		),
		(
			TEXT(Account.BillingCountryCode)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Country Code</label>
    <type>Text</type>
</CustomField>