ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Coupon_Can_Be_Generated__c.field-meta.xml
<CustomField>
    <fullName>Conga_Coupon_Can_Be_Generated__c</fullName>
    <description>CLAIMSV2-300 This is set to 0 when the Claim Stage is set to Payment. The Conga coupon button uses this with the DC parameter to block execution.</description>
    <formula>IF( ISPICKVAL(Claim_Stage__c, &apos;Payment&apos;)
&amp;&amp; !(ISPICKVAL(Brand__c, &apos;&apos;))
, 0
, 1)

/*
// this was already in the DC parameter but should not be needed, since lookup filters take care of ensuring Active products
// there is no indication on the button of what ticket this logic was derived from
// !IF(AND(NOT(ISNULL(Case.Product__c)), Case.Active_Product__c = FALSE, ISNULL(Case.Replacement_Product__c )), &quot;1&quot;, &quot;0&quot;
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga: Cannot Generate Coupon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>