ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Coupon_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Conga_Coupon_Delivery_Address__c</fullName>
    <description>This formula is dangerously close to the maximum size at over 4,300 characters and feels a bit like a hack.</description>
    <formula>IF(
    Account.Parent.BillingStreet &amp; &apos;|&apos; 
        &amp; Account.Parent.BillingCity &amp; &apos;|&apos;  
        &amp; TEXT(Account.Parent.BillingStateCode) &amp; &apos;|&apos; 
        &amp; Account.Parent.BillingPostalCode &amp; &apos;|&apos; 
        &amp; TEXT(Account.Parent.BillingCountryCode)   
    =
		Account.BillingStreet &amp; &apos;|&apos;
		&amp; Account.BillingCity &amp; &apos;|&apos; 
		&amp; TEXT(Account.BillingStateCode) &amp; &apos;|&apos;
		&amp; Account.BillingPostalCode &amp;&apos;|&apos;
		&amp; TEXT(Account.BillingCountryCode),
    &quot;Deliver to Same Address&quot;,
	IF(
          Contact.MailingStreet &amp; &apos;|&apos; 
        &amp; Contact.MailingCity &amp; &apos;|&apos;  
        &amp; TEXT(Contact.MailingStateCode) &amp; &apos;|&apos; 
        &amp; Contact.MailingPostalCode &amp; &apos;|&apos;   
    =
		Account.BillingStreet &amp; &apos;|&apos;
		&amp; Account.BillingCity &amp; &apos;|&apos; 
		&amp; TEXT(Account.BillingStateCode) &amp; &apos;|&apos;
		&amp; Account.BillingPostalCode &amp;&apos;|&apos;,
    &quot;Deliver to Same Address&quot;,
	(
        Account.BillingStreet &amp; BR()
	&amp; Account.BillingCity &amp; &quot;, &quot; 
	&amp; TEXT(Account.BillingStateCode) &amp; &quot; &quot;
	&amp; Account.BillingPostalCode
	)    
)  
)</formula>
    <inlineHelpText>Used for Conga Coupons; uses Account&apos;s Parent address if set, otherwise, Account&apos;s address</inlineHelpText>
    <label>Conga Coupon Delivery Address</label>
    <type>Text</type>
</CustomField>