ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Culture_Code__c.field-meta.xml
<CustomField>
    <fullName>Conga_Culture_Code__c</fullName>
    <description>Converts the Preferred Language field to a Culture code that can be used in Conga documents for translation and date formatting. https://tinyurl.com/y22t5gxr for details of the culture tag, which also formats currencies properly. Do not add to layouts. Use this field in URLs</description>
    <formula>CASE( Preferred_Language__c ,
&apos;English&apos;, &apos;en-CA&apos;,
&apos;Quebec French&apos;, &apos;fr-CA&apos;,
&apos;Spanish&apos;, &apos;es-ES&apos;,
&apos;en-CA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to set the Culture flag in Conga URLs. To change this change the Preferred Language.</inlineHelpText>
    <label>Conga Culture Code</label>
    <type>Text</type>
</CustomField>