ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Document_Footer__c.field-meta.xml
<CustomField>
    <fullName>Conga_Document_Footer__c</fullName>
    <description>The customer service email based on the Service Region the case originates from.
CLAIMSV2-880 -(21-5-2020)</description>
    <formula>CASE(Conga_Service_Region__c, 
&apos;US&apos;, $Setup.Warranty_Claims_Defaults__c.US_Document_Footer__c, 
&apos;Western Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Western_Canada_Document_Footer__c, 
&apos;Eastern Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Eastern_Canada_Document_Footer__c,
&apos;Decra&apos;, $Setup.Warranty_Claims_Defaults__c.Decra_Document_Footer__c, 
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga: Document Footer</label>
    <type>Text</type>
</CustomField>