ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Document_Group_Language__c.field-meta.xml
<CustomField>
    <fullName>Conga_Document_Group_Language__c</fullName>
    <formula>IF(ISPICKVAL(Preferred_Language__c, &quot;English&quot;), &quot;EN&quot;, &quot;FR&quot;)
 &amp; &quot;-&quot; 
 &amp; IF(Sector_Code__c = &quot;CA&quot; &amp;&amp; ISPICKVAL(Account.BillingStateCode, &quot;QC&quot;), &quot;QC&quot;, Sector_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Document Group Language</label>
    <type>Text</type>
</CustomField>