ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Document_Templates__c.field-meta.xml
<CustomField>
    <fullName>Conga_Document_Templates__c</fullName>
    <description>Creates an option to append to the Conga Template Group so we can pull appropriate templates.</description>
    <formula>&quot;_&quot;
 &amp; Conga_Document_Group_Language__c 
 &amp; IF(Qualified__c = True, 
   IF(Primary_Claim_Concern__c = &quot;Cracking&quot;, &quot;_CAC&quot;, IF(Primary_Claim_Concern__c = &quot;Granule Loss&quot;, &quot;_CAG&quot;, &quot;_ORGANIC&quot;)),
   &quot;_ORGANIC&quot;)
 &amp; IF( ISPICKVAL(Settlement_Type__c, &quot;Goodwill&quot;), &quot;_GOODWILL&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Document Templates</label>
    <type>Text</type>
</CustomField>