ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Fax_Header_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Conga_Fax_Header_Line_2__c</fullName>
    <description>IKO Office Address Line 2. This is based on the conga service regioin set. Refer to https://ikoussfsc.atlassian.net/browse/CLAIMSV2-323 for details.
CLAIMSV2-880 -(21-5-2020)</description>
    <formula>CASE(Conga_Service_Region__c, 
&apos;US&apos;, $Setup.Warranty_Claims_Defaults__c.US_IKO_Office_Address_Line_2__c, 
&apos;Western Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Western_Canada_IKO_Office_Address_Line_2__c, 
&apos;Eastern Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Eastern_Canada_IKO_Office_Address_Line_2__c,
&apos;Decra&apos;, $Setup.Warranty_Claims_Defaults__c.Decra_Office_Address_Line_2__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga: Fax Header Line 2</label>
    <type>Text</type>
</CustomField>