ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Fax_Header_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Conga_Fax_Header_Line_3__c</fullName>
    <description>Postal Code for IKO Office Address used in the Conga Templates
CLAIMSV2-880 -(21-5-2020)</description>
    <formula>CASE(Conga_Service_Region__c,
&apos;US&apos;, $Setup.Warranty_Claims_Defaults__c.US_IKO_Office_Address_Line_3__c,
&apos;Western Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Western_Canada_IKO_Office_Address_Line_3__c,
&apos;Eastern Canada&apos;, $Setup.Warranty_Claims_Defaults__c.Eastern_Canada_IKO_Office_Address_Line_3__c,
&apos;Decra&apos;, $Setup.Warranty_Claims_Defaults__c.Decra_Office_Address_Line_3__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Postal Code for IKO Office Address used in the Conga Templates</inlineHelpText>
    <label>Conga: Fax Header Line 3</label>
    <type>Text</type>
</CustomField>