ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Glass_Type__c.field-meta.xml
<CustomField>
    <fullName>Conga_Glass_Type__c</fullName>
    <description>2019-04-18 This should be removed. It does not accomplish the goal and is a waste of a roll up field.</description>
    <label>(deprecated) Conga Glass Type</label>
    <summaryFilterItems>
        <field>Claim_Type__c.Is_Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claim_Type__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>B Glass, D Lam/Glass</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim_Type__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>