ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Handseal_Bundle_Message_EN__c.field-meta.xml
<CustomField>
    <fullName>Conga_Handseal_Bundle_Message_EN__c</fullName>
    <description>Handseal Bundle Message in English. Displayed when Handseal_Replacement_Bundles__c &gt; 0, otherwise blank.</description>
    <formula>IF( Handseal_Replacement_Bundles__c &gt; 0,  
&quot; and &quot; &amp; TEXT(Handseal_Replacement_Bundles__c)  &amp; &quot; Bundles of &quot; &amp;  Settlement_Goodwill_Replacement_Product__c ,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Handseal Bundle Message EN</label>
    <type>Text</type>
</CustomField>