ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Handseal_Bundle_Message_FR__c.field-meta.xml
<CustomField>
    <fullName>Conga_Handseal_Bundle_Message_FR__c</fullName>
    <description>Handseal Bundle Message in French. Displayed when Handseal_Replacement_Bundles__c &gt; 0, otherwise blank.</description>
    <formula>IF(Handseal_Replacement_Bundles__c &gt; 0,
&quot; et &quot; &amp; TEXT(Handseal_Replacement_Bundles__c) &amp; &quot; paquets &quot; &amp;  Settlement_Goodwill_Replacement_Product__c,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Handseal Bundle Message FR</label>
    <type>Text</type>
</CustomField>