ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Handseal_Settlement_Actual_Labor__c.field-meta.xml
<CustomField>
    <fullName>Conga_Handseal_Settlement_Actual_Labor__c</fullName>
    <description>The sum of Hand_Seal_Settlement__c and Actual_Labor_Total__c. Used in Conga template only. Created based on https://ikoussfsc.atlassian.net/browse/CLAIMSV2-326.</description>
    <formula>Hand_Seal_Settlement__c + Actual_Labor_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga: Handseal Settlement&amp;Actual Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>