ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Iron_Clad_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Conga_Iron_Clad_Period_Months__c</fullName>
    <description>This field displays how many months is the iron clad warranty valid for. When a shingle is first installed it has an iron clad period where the warranty covers labour and material for the shingles. Depending on when installed and type of product they will have different period length. This first states what is that length. Derived from Iron Clad Period (Years) field.</description>
    <formula>Iron_Clad_Period_Years__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Iron Clad Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>