ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Labour_Cost__c.field-meta.xml
<CustomField>
    <fullName>Conga_Labour_Cost__c</fullName>
    <formula>Actual_Labor_Total__c</formula>
    <label>Conga Labour Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>