ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Labour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conga_Labour_Rate__c</fullName>
    <description>The labour rate used in Conga template. The logic is if actual labour rate is populated, use it; otherwise use suggested labour rate.</description>
    <formula>BLANKVALUE( Actual_Labour_Rate__c ,  Labour_Rate__c )</formula>
    <label>Conga Labour Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>