ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Language_Filter__c.field-meta.xml
<CustomField>
    <fullName>Conga_Language_Filter__c</fullName>
    <description>2019-07-05. This was meant to be used in the TNC paramater to filter the language for templates, but that doesn&apos;t seem to work. Maybe delete?</description>
    <formula>CASE( Preferred_Language__c ,
&apos;English&apos;, &apos;[EN]&apos;,
&apos;Quebec French&apos;, &apos;[FR]&apos;,
&apos;Spanish&apos;, &apos;[ES]&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(deprecated) Conga Language Filter</label>
    <type>Text</type>
</CustomField>