ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Conga_Mailing_City__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Mailing City</label>
    <type>Text</type>
</CustomField>