ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Conga_Mailing_State__c</fullName>
    <formula>TEXT(Account.BillingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Mailing  State</label>
    <type>Text</type>
</CustomField>