ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Conga_Mailing_Street__c</fullName>
    <formula>Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Mailing Street</label>
    <type>Text</type>
</CustomField>