ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Conga_Postal_Code__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Postal Code</label>
    <type>Text</type>
</CustomField>