ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Release_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Conga_Release_Not_Allowed__c</fullName>
    <description>Offer documents cannot be generated if: the case is not approved, the case is closed, or the Parent OR Contractor account is not verified.</description>
    <formula>IF( IsClosed = true
|| CONTAINS( Parent_Contractor_Account_Verified__c, &apos;Not Verified&apos;)
|| ISPICKVAL(Brand__c,&apos;&apos;)
|| ClaimApproved__c = false,
1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is a 1, the Offer cannot be generated.</inlineHelpText>
    <label>Conga: Release Not Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>