ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Replacement_Product__c.field-meta.xml
<CustomField>
    <fullName>Conga_Replacement_Product__c</fullName>
    <formula>TEXT(IF( ISBLANK(Num_of_Bundles_for_Settlement__c) ,  
  Suggested_Bundles_for_Settlement__c , 
  Num_of_Bundles_for_Settlement__c))
&amp; &quot; &quot; &amp;
IF( ISBLANK( Replacement_Product__c ) ,
   TEXT(Product__r.Unit_of_Measure__c) &amp; &quot; &quot; &amp;  Product__r.Name ,
   TEXT( Replacement_Product__r.Unit_of_Measure__c) &amp; &quot; &quot; &amp;  Replacement_Product__r.Name )</formula>
    <label>Conga Replacement Product</label>
    <type>Text</type>
</CustomField>