ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Service_Region__c.field-meta.xml
<CustomField>
    <fullName>Conga_Service_Region__c</fullName>
    <description>The Service Region. Use this in other fields when you need to choose the right value from a Claims custom setting.
CLAIMSV2-880 -(21-5-2020) ,  CLAIMSV2-960-(28-5-2020)</description>
    <formula>IF(
  ISPICKVAL(Sector__c, &quot;Decra&quot;), 
  &apos;Decra&apos;,
    IF(
    OR(
        ISPICKVAL(Account.BillingCountryCode , &quot;US&quot;),
        ISPICKVAL(Sector__c, &quot;US&quot;) 
    ),
     &apos;US&apos; ,
    IF(AND(
        ISPICKVAL(Account.BillingCountryCode , &quot;CA&quot;),
        OR
        (
        ISPICKVAL(Account.BillingStateCode, &quot;AB&quot;),
        ISPICKVAL(Account.BillingStateCode, &quot;BC&quot;),
        ISPICKVAL(Account.BillingStateCode, &quot;SK&quot;),
        ISPICKVAL(Account.BillingStateCode, &quot;NT&quot;),
        ISPICKVAL(Account.BillingStateCode, &quot;YT&quot;),
        ISPICKVAL(Account.BillingStateCode, &quot;NU&quot;),
        ISPICKVAL(Account.BillingStateCode, &quot;MB&quot;)
        )
           ),
     &apos;Western Canada&apos; ,
     &apos;Eastern Canada&apos; 
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Customer Service Region.</inlineHelpText>
    <label>Conga: Service Region</label>
    <type>Text</type>
</CustomField>