ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Group__c</fullName>
    <formula>IF(
Conga_Organic_Type__c &gt;= 1,
&quot;Organic&quot; ,
IF(
 Conga_Glass_Type__c &gt;= 1,
&quot;Glass&quot;,
&quot;Release&quot;)
)</formula>
    <label>Conga Template Group</label>
    <type>Text</type>
</CustomField>