ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Template_Group_Claim_Concern__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Group_Claim_Concern__c</fullName>
    <description>Used to map the Claim Concern to conga groups. Can be used to define template selection</description>
    <formula>IF(Qualified__c = True, 
IF(Primary_Claim_Concern__c = &quot;Cracking&quot;, &quot;_CAC&quot;, IF(Primary_Claim_Concern__c = &quot;Granule Loss&quot;, &quot;_CAG&quot;, &quot;_REG&quot;)),
&quot;_REG&quot;)</formula>
    <label>Conga: Template Group Claim Concern</label>
    <type>Text</type>
</CustomField>