ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Template_Group_Extension__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Group_Extension__c</fullName>
    <description>Used to select the conga template group, either completely or by serving as an extension which can be added using the URL formula.</description>
    <inlineHelpText>Template Group that applies for this document.</inlineHelpText>
    <label>Conga: Template Group Extension</label>
    <length>80</length>
    <type>Text</type>
</CustomField>