ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Template_Group_Goodwill__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Group_Goodwill__c</fullName>
    <description>2019-07-26: we are no longer using this as a way of identifying group. _GOODWILL if the case is a good will template. Can be used to restrict template selection. Null if it it not.</description>
    <formula>IF( ISPICKVAL(Settlement_Type__c, &quot;Goodwill&quot;), &quot;_GW&quot;, &quot;&quot;)</formula>
    <label>(do not use) Conga:TemplateGroupGoodwill</label>
    <type>Text</type>
</CustomField>