ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Template_Group_Language__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Group_Language__c</fullName>
    <description>Uses a couple of other fields to define an ISO like language code that is LANGUAGE-REGION

Quebec is considered a reason separate from the rest of Canada, even though we won.</description>
    <formula>CASE(
TEXT(Preferred_Language__c),
&quot;English&quot;, &quot;English&quot;,
&quot;Quebec French&quot;, &quot;French&quot;,
&quot;English&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga: Template Group Language</label>
    <type>Text</type>
</CustomField>