ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Conga_Template_IDs__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_IDs__c</fullName>
    <label>Conga: Template IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>