ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Contact_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Contact_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up for Contact for contractor and builder origins</description>
    <label>Contact of Interest</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Contact of Interest)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>