ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/ContactAvailable__c.field-meta.xml
<CustomField>
    <fullName>ContactAvailable__c</fullName>
    <description>Created for Customer Service Implementation. This is a flag to indicate whether a contact is associated to a case</description>
    <formula>IF(ISBLANK(ContactId), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Available</label>
    <type>Checkbox</type>
</CustomField>