ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Case/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contractor Account which a Residential or Commercial Claim is related to</description>
    <label>Contractor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.
(Should be of Record Type - Contractor / US Contractor / Residential Account, with Legacy Claim Account False)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contractor, US Contractor, Residential Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Legacy_Claim_Account__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contractor Cases</relationshipLabel>
    <relationshipName>ContractorCases</relationshipName>
    <type>Lookup</type>
</CustomField>